JEAP-6536 Fix sonar findings